<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="135dp"
            android:id="@+id/rel1"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mainPageCard"
                style="?attr/cardViewStyle"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="25dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"

                    android:layout_height="match_parent"
                    android:background="@drawable/main_page_drawable"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="5">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/mainLayoutItemText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="4dp"
                                android:layout_marginTop="8dp"
                                android:layout_marginEnd="4dp"
                                android:fontFamily="@font/archivo_black"
                                android:text="Asosiy Qism"
                                android:textAlignment="textStart"
                                android:textColor="@color/white"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/textViewAdditional"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="4dp"
                                android:layout_marginTop="4dp"
                                android:layout_marginEnd="4dp"
                                android:layout_marginBottom="8dp"
                                android:text="@string/main_page_d"
                                android:textColor="@color/white"
                                android:textSize="14sp" />
                        </LinearLayout>

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3">


                    </RelativeLayout>

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <ImageView
                android:id="@+id/mainImage"
                android:layout_width="wrap_content"
                android:layout_height="110dp"
                android:layout_alignParentEnd="true"
                android:elevation="3dp"
                android:src="@drawable/ic_img_5" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="135dp"
            android:id="@+id/rel2"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp">

            <com.google.android.material.card.MaterialCardView
                style="?attr/cardViewStyle"
                android:id="@+id/interestingInfoCard"

                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_marginStart="25dp"
                android:layout_alignParentBottom="true"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:background="@drawable/interesting_page_drawable"
                    android:orientation="horizontal">
                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"/>
                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="5">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/interestingItemText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="4dp"
                                android:layout_marginTop="8dp"
                                android:layout_marginEnd="4dp"
                                android:fontFamily="@font/archivo_black"
                                android:text="@string/inter_info"
                                android:textAlignment="textStart"
                                android:textColor="@color/white"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/interestingAdditional"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="4dp"
                                android:layout_marginTop="4dp"
                                android:layout_marginEnd="4dp"
                                android:layout_marginBottom="8dp"
                                android:text="@string/inter_info_d"
                                android:textColor="@color/white"
                                android:textSize="14sp" />
                        </LinearLayout>

                    </RelativeLayout>



                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <ImageView
                android:id="@+id/interestingImage"
                android:layout_width="wrap_content"
                android:layout_height="110dp"
                android:elevation="3dp"
                android:src="@drawable/ic_img_1" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="135dp"
            android:layout_marginStart="10dp"
            android:id="@+id/rel3"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp">
            <com.google.android.material.card.MaterialCardView
                style="?attr/cardViewStyle"
                android:id="@+id/questionCard"

                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:clickable="true"
                android:layout_marginEnd="25dp"
                android:layout_alignParentBottom="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:background="@drawable/question_drawable"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="5">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/questionItemText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="4dp"
                                android:layout_marginTop="8dp"
                                android:layout_marginEnd="4dp"
                                android:fontFamily="@font/archivo_black"
                                android:text="@string/question"
                                android:textAlignment="textStart"
                                android:textColor="@color/white"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/questionAdditional"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="4dp"
                                android:layout_marginTop="4dp"
                                android:layout_marginEnd="4dp"
                                android:layout_marginBottom="8dp"
                                android:text="@string/question_d"
                                android:textColor="@color/white"
                                android:textSize="14sp" />
                        </LinearLayout>

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3">

                    </RelativeLayout>

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <ImageView
                android:id="@+id/questionImage"
                android:layout_width="wrap_content"
                android:layout_height="110dp"
                android:elevation="3dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_img_2" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="135dp"
            android:id="@+id/rel4"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp">
            <com.google.android.material.card.MaterialCardView
                style="?attr/cardViewStyle"
                android:id="@+id/getMoneyCard"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:clickable="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="25dp"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:background="@drawable/get_money_drawable"
                    android:orientation="horizontal">
                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3">


                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="5">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/getMoneyItemText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="4dp"
                                android:layout_marginTop="8dp"
                                android:layout_marginEnd="4dp"
                                android:fontFamily="@font/archivo_black"
                                android:text="@string/get_money"
                                android:textAlignment="textStart"
                                android:textColor="@color/white"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/getMoneyAdditional"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="4dp"
                                android:layout_marginTop="4dp"
                                android:layout_marginEnd="4dp"
                                android:layout_marginBottom="8dp"
                                android:text="@string/get_money_d"
                                android:textColor="@color/white"
                                android:textSize="14sp" />
                        </LinearLayout>

                    </RelativeLayout>



                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <ImageView
                android:id="@+id/getMoneyImage"
                android:elevation="3dp"
                android:layout_width="130dp"
                android:layout_height="110dp"

                android:src="@drawable/get_money" />
        </RelativeLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>